--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,16 @@
 <html>
   <head>
     <title><%= title %></title>
+    <link rel="stylesheet" href="/stylesheets/tailwind.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <ul class="container">
+      <li class="border-b"><a href="#">test1</a></li>
+      <li><a href="#">test</a></li>
+      <li><a href="#">test</a></li>
+    </ul>
   </body>
 </html>
