--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,1 @@
-body{padding:50px;font:16px 'Lucida Grande',Helvetica,Arial,sans-serif}a{color:#00b7ff}
+body{font:16px 'Lucida Grande',Helvetica,Arial,sans-serif}a{color:#00b7ff}
