feat: add m4v/mov file test

--- a/views/download.ejs
+++ b/views/download.ejs
@@ -252,6 +252,46 @@
                       <a id="videoDownload" href="javascript: void(0);" class="ml-2 text-indigo-600 hover:text-indigo-900">Download</a>
                     </td>
                   </tr>
+                  <tr>
+                    <td class="px-6 py-4 whitespace-nowrap">
+                      <div class="flex items-center">
+                        <div class="flex-shrink-0 h-10 w-10">
+                          <img
+                                  class="h-10 w-10 rounded-full"
+                                  src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
+                                  alt=""
+                          />
+                        </div>
+                        <div class="ml-4">
+                          <div class="text-sm font-medium text-gray-900">mov_bbb.m4v</div>
+                        </div>
+                      </div>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+                      <a target="_blank" href="/assets/mov_bbb.m4v" class="text-indigo-600 hover:text-indigo-900">Preview</a>
+                      <a id="videoDownload2" href="javascript: void(0);" class="ml-2 text-indigo-600 hover:text-indigo-900">Download</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="px-6 py-4 whitespace-nowrap">
+                      <div class="flex items-center">
+                        <div class="flex-shrink-0 h-10 w-10">
+                          <img
+                                  class="h-10 w-10 rounded-full"
+                                  src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
+                                  alt=""
+                          />
+                        </div>
+                        <div class="ml-4">
+                          <div class="text-sm font-medium text-gray-900">mov_bbb.mov</div>
+                        </div>
+                      </div>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+                      <a target="_blank" href="/assets/mov_bbb.mov" class="text-indigo-600 hover:text-indigo-900">Preview</a>
+                      <a id="videoDownload3" href="javascript: void(0);" class="ml-2 text-indigo-600 hover:text-indigo-900">Download</a>
+                    </td>
+                  </tr>
                 </tbody>
               </table>
             </div>
