docs: add readme

--- a/views/download.ejs
+++ b/views/download.ejs
@@ -31,7 +31,7 @@
                   <a
                     href="/"
                     class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
-                    >Upload File Example</a
+                    >Upload Examples</a
                   >
 
                   <a href="/downloads" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium"
