--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
                 <a
                         href="/"
                         class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium"
-                >Upload File Example</a
+                >Upload Examples</a
                 >
                 <a href="/downloads" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
                 >Download Examples</a
