--- a/views/download.ejs
+++ b/views/download.ejs
@@ -172,7 +172,6 @@
           </div>
         </div>
       </nav>
-      <!-- This example requires Tailwind CSS v2.0+ -->
       <div class="flex flex-col p-8">
         <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
           <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
@@ -192,106 +191,24 @@
                   </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
-                  <tr>
-                    <td class="px-6 py-4 whitespace-nowrap">
-                      <div class="flex items-center">
-                        <div class="flex-shrink-0 h-10 w-10">
-                          <img
-                            class="h-10 w-10 rounded-full"
-                            src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
-                            alt=""
-                          />
+                  <% files.forEach(function(file) { %>
+                    <tr>
+                      <td class="px-6 py-4 whitespace-nowrap">
+                        <div class="flex items-center">
+                          <div class="flex-shrink-0 h-10 w-10">
+                            <img class="h-10 w-10" src="/images/<%= file.ext %>.png" alt="<%= file.name %>" />
+                          </div>
+                          <div class="ml-4">
+                            <div class="text-sm font-medium text-gray-900"><%= file.name %></div>
+                          </div>
                         </div>
-                        <div class="ml-4">
-                          <div class="text-sm font-medium text-gray-900">des.pdf</div>
-                        </div>
-                      </div>
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                      <a target="_blank" href="/assets/des.pdf" class="text-indigo-600 hover:text-indigo-900">Preview</a>
-                      <a id="pdfDownload" href="javascript: void(0);" class="ml-2 text-indigo-600 hover:text-indigo-900">Download</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="px-6 py-4 whitespace-nowrap">
-                      <div class="flex items-center">
-                        <div class="flex-shrink-0 h-10 w-10">
-                          <img
-                            class="h-10 w-10 rounded-full"
-                            src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
-                            alt=""
-                          />
-                        </div>
-                        <div class="ml-4">
-                          <div class="text-sm font-medium text-gray-900">des.jpeg</div>
-                        </div>
-                      </div>
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                      <a target="_blank" href="/assets/des.jpeg" class="text-indigo-600 hover:text-indigo-900">Preview</a>
-                      <a id="imageDownload" href="javascript: void(0);" class="ml-2 text-indigo-600 hover:text-indigo-900">Download</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="px-6 py-4 whitespace-nowrap">
-                      <div class="flex items-center">
-                        <div class="flex-shrink-0 h-10 w-10">
-                          <img
-                            class="h-10 w-10 rounded-full"
-                            src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
-                            alt=""
-                          />
-                        </div>
-                        <div class="ml-4">
-                          <div class="text-sm font-medium text-gray-900">mov_bbb.mp4</div>
-                        </div>
-                      </div>
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                      <a target="_blank" href="/assets/mov_bbb.mp4" class="text-indigo-600 hover:text-indigo-900">Preview</a>
-                      <a id="videoDownload" href="javascript: void(0);" class="ml-2 text-indigo-600 hover:text-indigo-900">Download</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="px-6 py-4 whitespace-nowrap">
-                      <div class="flex items-center">
-                        <div class="flex-shrink-0 h-10 w-10">
-                          <img
-                                  class="h-10 w-10 rounded-full"
-                                  src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
-                                  alt=""
-                          />
-                        </div>
-                        <div class="ml-4">
-                          <div class="text-sm font-medium text-gray-900">mov_bbb.m4v</div>
-                        </div>
-                      </div>
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                      <a target="_blank" href="/assets/mov_bbb.m4v" class="text-indigo-600 hover:text-indigo-900">Preview</a>
-                      <a id="videoDownload2" href="javascript: void(0);" class="ml-2 text-indigo-600 hover:text-indigo-900">Download</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="px-6 py-4 whitespace-nowrap">
-                      <div class="flex items-center">
-                        <div class="flex-shrink-0 h-10 w-10">
-                          <img
-                                  class="h-10 w-10 rounded-full"
-                                  src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
-                                  alt=""
-                          />
-                        </div>
-                        <div class="ml-4">
-                          <div class="text-sm font-medium text-gray-900">mov_bbb.mov</div>
-                        </div>
-                      </div>
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                      <a target="_blank" href="/assets/mov_bbb.mov" class="text-indigo-600 hover:text-indigo-900">Preview</a>
-                      <a id="videoDownload3" href="javascript: void(0);" class="ml-2 text-indigo-600 hover:text-indigo-900">Download</a>
-                    </td>
-                  </tr>
+                      </td>
+                      <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+                        <a target="_blank" href="/assets/<%= file.name %>" class="text-indigo-600 hover:text-indigo-900">Preview</a>
+                        <a href="javascript: downloadFile('<%= file.name %>');" class="ml-2 text-indigo-600 hover:text-indigo-900">Download</a>
+                      </td>
+                    </tr>
+                  <% });%>
                 </tbody>
               </table>
             </div>
@@ -299,6 +216,7 @@
         </div>
       </div>
     </div>
+    <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="/javascripts/download.js"></script>
   </body>
 </html>
