feat: generate file hash

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -193,6 +193,7 @@
       </div>
     </div>
     <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/spark-md5/3.0.0/spark-md5.min.js"></script>
     <script src="/javascripts/upload.js"></script>
   </body>
 </html>
