--- a/src/views/download.ejs
+++ b/src/views/download.ejs
@@ -229,8 +229,7 @@
         </div>
       </div>
     </div>
-    <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/dist/vendor.min.js"></script>
     <script src="/dist/download.min.js"></script>
   </body>
 </html>
