--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -283,9 +283,7 @@
         </div>
       </div>
     </div>
-    <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/spark-md5/3.0.0/spark-md5.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/dist/vendor.min.js"></script>
     <script src="/dist/upload.min.js"></script>
   </body>
 </html>
