feat: limit upload file size

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -198,7 +198,7 @@
               </label>
               <p class="pl-1">or drag and drop</p>
             </div>
-            <p class="text-xs text-gray-500">PNG, JPG, GIF up to 100MB</p>
+            <p class="text-xs text-gray-500">For test, file size will limit to 50MB</p>
           </div>
         </div>
       </div>
