feat: add toastr to show message

--- a/src/views/download.ejs
+++ b/src/views/download.ejs
@@ -10,6 +10,7 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="/stylesheets/tailwind.min.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link href="https://cdn.bootcdn.net/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet">
   </head>
   <body>
     <!-- This example requires Tailwind CSS v2.0+ -->
