--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,6 +4,7 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="/stylesheets/tailwind.min.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link href="https://cdn.bootcdn.net/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet">
     <style>
       .bg-emerald-200 {
         background-color: rgb(167,243,208);
