fix: fix problem of unlink path failed issue

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -267,9 +267,9 @@
                       </tr>
                     <% });%>
                   <% } else { %>
-                    <tr>
+                    <tr id="emptyArea">
                       <td colspan="4">
-                        <div id="emptyArea" class="flex justify-center items-center py-32">
+                        <div class="flex justify-center items-center py-32">
                           <div class="text-sm font-medium text-gray-900">
                             Empty List, try to <label for="fileUpload" class="text-indigo-600 hover:text-indigo-900 cursor-pointer">upload</label> some files!
                           </div>
