--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -211,6 +211,7 @@
                 <thead class="bg-gray-50">
                 <tr>
                   <th scope="col" class="w-2/6 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
+                  <th scope="col" class="w-1/6 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Chunk Progress</th>
                   <th scope="col" class="w-1/6 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Progress</th>
                   <th scope="col" class="w-1/6 px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
                   <th scope="col" class="relative px-6 py-3">
@@ -235,6 +236,9 @@
                               <div class="text-sm font-medium text-gray-900"><%= file.name %></div>
                             </div>
                           </div>
+                        </td>
+                        <td class="px-6 py-4 whitespace-nowrap">
+                          <div class="relative pt-1">None</div>
                         </td>
                         <td class="px-6 py-4 whitespace-nowrap">
                           <div class="relative pt-1">
@@ -268,7 +272,7 @@
                     <% });%>
                   <% } else { %>
                     <tr id="emptyArea">
-                      <td colspan="4">
+                      <td colspan="5">
                         <div class="flex justify-center items-center py-32">
                           <div class="text-sm font-medium text-gray-900">
                             Empty List, try to <label for="fileUpload" class="text-indigo-600 hover:text-indigo-900 cursor-pointer">upload</label> some files!
