--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -238,7 +238,7 @@
                           </div>
                         </td>
                         <td class="px-6 py-4 whitespace-nowrap">
-                          <div class="relative pt-1 w-1/2">None</div>
+                          <div class="relative pt-1 w-1/2"></div>
                         </td>
                         <td class="px-6 py-4 whitespace-nowrap">
                           <div class="relative pt-1">
